updated quiz component

--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,12 +1,22 @@
+<h2>Quiz</h2>
 <ul class="list-group">
   <li *ngFor="let question of questions" class="list-group-item">
     <div [ngSwitch]="question.type">
       <app-multiple-choice
         [question]="question"
+        [(answer)]="question.answer"
+        [grading]="grading"
         *ngSwitchCase="'MULTIPLE_CHOICE'"></app-multiple-choice>
       <app-true-false
         [question]="question"
+        [(answer)]="question.answer"
+        [grading]="grading"
         *ngSwitchCase="'TRUE_FALSE'"></app-true-false>
     </div>
   </li>
 </ul>
+<button (click)="submitQuiz()">
+  Submit Quiz
+</button>
+<div [hidden]="!grading">Your Score: {{quizResult.score}}</div>
+
